--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   background-repeat: no-repeat;
   background-size: 100%;
   max-width: 100vw;
-  height: 95vh;
+  height: 100vh;
   overflow-x: hidden;
 }
 main {
@@ -71,6 +71,8 @@ header p {
   background-color: hsl(300, 24%, 96%);
   width: 27.8125rem;
   display: flex;
+  /* grid-template-columns: repeat(2, max-content); */
+  /* grid-template-rows: repeat(3, min-content); */
   flex-direction: row;
   align-items: center;
   gap: 2rem;
@@ -150,6 +152,7 @@ header p {
     justify-content: center;
     align-items: center;
     text-align: center;
+    gap: 1rem;
   }
   header p {
     margin: 2rem auto;
@@ -158,26 +161,27 @@ header p {
   .rating-bars {
     justify-self: center;
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     align-items: center;
   }
   .rating-box {
-    width: 20.3125rem;
-    flex-direction: column;
-    gap: 0.5rem;
+    /* width: 20.3125rem; */
+    /* flex-direction: column; */
+    /* gap: 0.5rem; */
     justify-self: center;
   }
   .rating-box:nth-child(1) {
-    /* margin-top: 0; */
+    margin-left: -8rem;
   }
   .rating-box:nth-child(2) {
-    margin-top: 2rem;
+    margin-left: 0;
   }
   .rating-box:nth-child(3) {
-    margin-top: 4rem;
+    margin-left: 8rem;
   }
 
   .reviews {
+    margin-top: 3rem;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: min-content;
   }
@@ -205,28 +209,45 @@ header p {
 @media screen and (max-width: 700px) {
   body {
     background-image: url(images/bg-pattern-bottom-mobile.svg);
+    max-width: 100%;
+    height: 100%;
   }
   main {
     background-image: url(images/bg-pattern-top-mobile.svg);
+    width: 100%;
+    margin: 0 auto;
+    padding-bottom: 0;
   }
   h1 {
     font-size: 1.875rem;
+    margin-bottom: 1rem;
   }
   .heading {
     /* text-align: center; */
   }
   .heading p {
-    padding: 0 1.4rem;
     font-size: 0.85rem;
+    max-width: 21rem;
+    margin: 1rem auto;
   }
-  header,
-  .reviews {
+  header {
     flex-direction: column;
   }
-
-  .rating-box:nth-child(2),
+  .rating-box {
+    flex-direction: column;
+    width: 20.4375rem;
+    gap: 0.5rem;
+    margin: 0;
+    padding: 1.4rem 0 1rem 0;
+  }
+  .rating-box:nth-child(1) {
+    margin-left: 0;
+  }
+  .rating-box:nth-child(2) {
+    margin-left: 0;
+  }
   .rating-box:nth-child(3) {
-    margin-left: 0rem;
+    margin-left: 0;
   }
 
   header section {
@@ -236,15 +257,39 @@ header p {
     width: 100%;
   }
   .reviews {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, min-content);
     margin-top: 2.5rem;
-    align-items: center;
+    /* align-items: center; */
   }
   .review {
-    width: 90%;
+    width: 20.4375rem;
+    height: 15.75rem;
     padding: 2.5rem 1.875rem;
+  }
+
+  .review:nth-child(1) {
+    justify-self: center;
+  }
+  .review:nth-child(2) {
+    justify-self: center;
+  }
+  .review:nth-child(3) {
+    justify-self: center;
   }
   .attribution {
     flex-direction: column;
   }
-
+}
+@media screen and (max-width: 359px) {
+  .heading p {
+    max-width: 18rem;
+  }
+  .rating-box {
+    width: 90%;
+    padding: 1.4rem 0 1rem 0;
+  }
+  .review {
+    width: 90%;
+  }
 }
