--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ html {
 body {
   font-family: "Spartan", sans-serif;
   background-image: url(images/bg-pattern-bottom-desktop.svg);
-  background-position: bottom;
+  background-position: bottom right;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 80%;
   max-width: 100vw;
   height: 100vh;
   overflow-x: hidden;
@@ -21,10 +21,11 @@ body {
 main {
   width: 69.375rem;
   background-image: url(images/bg-pattern-top-desktop.svg);
-  background-position: top;
+  background-position: top left;
   background-repeat: no-repeat;
+  background-size: 50%;
   margin: auto;
-  padding-top: 9rem;
+  padding-top: 8rem;
 }
 h1,
 h2,
